--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			<p class="copyright">Copyright 2015. Relaxr.</p>
 		</footer>
 
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 		<script type="text/javascript" src="js/jquery.js"></script>
 
 	</body>
